--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -22,6 +22,7 @@
 
 		.ally_def_target {
 		  font-size: 1rem;
+		  padding: .25rem 0;
 		  border-bottom: 1px solid rgba(black, .5);
 		  background: rgba(black, .2);
 
