--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -115,7 +115,8 @@
 		  font-size: $text-small;
 		  position: absolute;
 		  right: 2rem;
-		  top: .9rem;
+		  top: 3.8rem;
+		  z-index: 20;
 
 		  + p {
 			width: 100%;
@@ -123,6 +124,7 @@
 			font-size: $text-small;
 			padding: 1rem 50% 1rem 2rem;
 			background: $color-secondary-alt;
+			z-index: 10;
 		  }
 		}
 
@@ -145,7 +147,7 @@
 
 	  .construction_built {
 		padding: 0 2rem;
-		margin-top: -2.1rem;
+		margin-top: -5.2rem;
 		font-size: 1rem;
 		width: 206px;
 		text-align: right;
@@ -164,7 +166,7 @@
 		}
 
 		.progress_wrapper {
-		  margin: 1.8rem 0 1rem;
+		  margin: 4.4rem 0 1rem;
 
 		  + p {
 			font-size: $text-default;
